--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,45 @@
         <item name="colorControlActivated">@color/colorPrimaryDark</item>
     </style>
 
+
+
+    <!-- Default editext app style -->
+    <style name="AppTheme.Input" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/bg_edittext_shape</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_40</item>
+        <item name="android:drawablePadding">@dimen/dp_10</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textStyle">italic|bold</item>
+        <item name="android:padding">@dimen/dp_10</item>
+    </style>
+
+    <style name="AppTheme.Input.Login" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@drawable/bg_edittext_login</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_50</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:drawablePadding">@dimen/dp_10</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textStyle">italic|bold</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:padding">@dimen/dp_10</item>
+    </style>
+
+    <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
+
+    <item name="android:background">@drawable/bg_edittext_login</item>
+        <item name="android:layout_height">@dimen/dp_50</item>
+        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:drawablePadding">@dimen/dp_10</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:textStyle">italic|bold</item>
+        <item name="android:textSize">@dimen/sp_16</item>
+        <item name="android:padding">@dimen/dp_10</item>
+   </style>
 </resources>
