--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -36,4 +36,36 @@
           android:layout_below="@+id/flPassword"
           style="@style/AppTheme.Button"/>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="@dimen/dp_5"
+        android:layout_alignParentBottom="true">
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/flCreateAccount"
+            android:layout_height="wrap_content"
+            android:text="@string/str_create_account"
+            android:layout_gravity="start"
+            android:padding="@dimen/dp_2"
+            android:layout_alignParentLeft="true"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp_14"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/flForgotPass"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:padding="@dimen/dp_2"
+            android:layout_toLeftOf="@+id/flCreateAccount"
+            android:layout_alignParentRight="true"
+            android:text="@string/str_has_forgotPass"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp_14"/>
+        </RelativeLayout>
+
 </RelativeLayout>
