--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
 
     <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
 
-    <item name="android:background">@drawable/bg_edittext_login</item>
+    <item name="android:background">@drawable/ic_login</item>
         <item name="android:layout_height">@dimen/dp_50</item>
         <item name="android:textColorHint">@android:color/white</item>
         <item name="android:drawablePadding">@dimen/dp_10</item>
