--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -45,5 +45,6 @@
     <dimen name="dp_100">100dp</dimen>
     <dimen name="sp_17">17sp</dimen>
     <dimen name="dp_7">7dp</dimen>
+    <dimen name ="dp_130">130dp</dimen>
 
 </resources>
