--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -18,10 +18,11 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/frImgProfile"
-                android:layout_width="@dimen/dp_130"
-                android:layout_height="@dimen/dp_130"
+                android:layout_width="@dimen/dp_100"
+                android:layout_height="@dimen/dp_100"
                 app:civ_border_width="2dp"
                 android:layout_gravity="center_horizontal"
+                android:src="@drawable/default_profile_photo"
                 app:civ_border_color="@color/civ_border"/>
 
 
@@ -53,6 +54,7 @@
                     android:padding="@dimen/dp_5"
                     android:textSize="@dimen/sp_16"
                     android:textStyle="bold|italic"
+                    android:hint="@string/str_fullname"
                     android:textColorHint="@android:color/white"
                     android:textColor="@android:color/white"
                     android:layout_marginLeft="@dimen/dp_2"
@@ -89,6 +91,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_5"
                     android:textSize="@dimen/sp_16"
+                    android:hint="@string/str_password"
                     android:textStyle="bold|italic"
                     android:textColorHint="@android:color/white"
                     android:textColor="@android:color/white"
@@ -129,6 +132,7 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_5"
                     android:textSize="@dimen/sp_16"
+                    android:hint="@string/str_email"
                     android:textStyle="bold|italic"
                     android:textColor="@android:color/white"
                     android:textColorHint="@android:color/white"
@@ -166,6 +170,7 @@
                     android:inputType="phone|textNoSuggestions"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/dp_5"
+                    android:hint="@string/str_phone"
                     android:textSize="@dimen/sp_16"
                     android:textStyle="bold|italic"
                     android:textColorHint="@android:color/white"
