--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -53,6 +53,7 @@
              android:layout_width="0sp"
              android:id="@+id/fpEdtExpiry"
              android:layout_height="wrap_content"
+             android:editable="false"
              android:inputType="textNoSuggestions"
              android:layout_weight=".3"
              style="@style/AppTheme.Input"/>
