Created update accout screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#EA4C44</color>
     <color name="colorPrimaryDark">#c1413a</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#c1413a</color>
     <color name="colorEdtBg">#d27872</color>
     <color name="civ_border">#6c2420</color>
 
