--- a/app/src/main/res/layout/actvity_base.xml
+++ b/app/src/main/res/layout/actvity_base.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/topBaseLinear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical">
 
-    <include layout="@layout/toolbar"></include>
+    <include layout="@layout/toolbar"
+        ></include>
 
    <FrameLayout
         android:id="@+id/activity_content"
+        android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white">
@@ -18,8 +20,15 @@
     </FrameLayout>
 
 
+     <ProgressBar
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:id="@+id/progressBar"
+         android:layout_centerInParent="true"
+         android:visibility="gone"
+         style="@style/Widget.AppCompat.ProgressBar"/>
 
-</LinearLayout>
+</RelativeLayout>
 
 
 
