--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -15,10 +15,9 @@
         android:id="@+id/tv_toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:text="RUSH"
-        android:layout_gravity="center|right"
+        android:layout_gravity="center"
         android:textAllCaps="true"
+        android:textSize="@dimen/dp_17"
         android:textColor="@android:color/white"
         android:layout_marginRight="@dimen/dp_10"
         android:textStyle="bold"
