--- a/app/src/main/res/layout/nav_header_book_service.xml
+++ b/app/src/main/res/layout/nav_header_book_service.xml
@@ -1,35 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="wrap_content"
     android:background="@color/colorPrimaryDark"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/dp_13"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/headerImgProfile"
+        android:layout_width="@dimen/dp_80"
+        android:layout_height="@dimen/dp_80"
+        app:civ_border_width="2dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/default_profile_photo"
+        app:civ_border_color="@color/civ_border"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:layout_marginLeft="@dimen/dp_20"
+        android:layout_toRightOf="@+id/headerImgProfile"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/headerTxtName"
+            android:layout_height="wrap_content"
+            android:text="Name"
+            android:layout_gravity="start"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp_14"/>
 
-</LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/headerTxtEmail"
+            android:layout_height="wrap_content"
+            android:text="email"
+            android:layout_gravity="start"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp_14"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/headerTxtPhone"
+            android:layout_height="wrap_content"
+            android:text="phone"
+            android:layout_gravity="start"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/dp_14"/>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/headerEditTxt"
+            android:layout_height="wrap_content"
+            android:text="Edit Profile"
+            android:gravity="center_vertical"
+            android:drawableRight="@drawable/ic_edit"
+            android:textColor="@android:color/white"
+            android:textStyle="normal"
+            android:textSize="@dimen/dp_11"/>
+        </LinearLayout>
+
+</RelativeLayout>
