--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -42,6 +42,7 @@
     <dimen name="dp_60">60dp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="sp_15">15sp</dimen>
+    <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="sp_17">17sp</dimen>
     <dimen name="dp_7">7dp</dimen>
